have a nice day!

--- a/indexes/nsc1025/193.md
+++ b/indexes/nsc1025/193.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：核酸亭乱象 河南楼阳生被烧烤](../../pages/nsc1025/n13755983.md) 
 #### [【有冇搞错】美国的暴力共产主义](../../pages/nsc1025/n13755507.md) 
 #### [何清涟：后疫情时代觉醒的医道良知](../../pages/nsc1025/n13755199.md) 
 #### [王友群：观察当今中国走向的三个关键问题](../../pages/nsc1025/n13755428.md) 
@@ -29,7 +30,6 @@
 #### [颜丹：中共鼓吹“上海回来了”是自欺欺人](../../pages/nsc1025/n13752347.md) 
 #### [王赫：日韩力推“经济安保” 剑指中共](../../pages/nsc1025/n13752170.md) 
 #### [【名家专栏】中共欲控制“云” 掌握敏感数据](../../pages/nsc1025/n13751647.md) 
-#### [杨宁：不见习李批示 官媒淡化四川强震有因](../../pages/nsc1025/n13751790.md) 
 
 ---
-#### 第 [ [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) ] 页
+#### 第 [ [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) / [186](./186.md) ] 页
