--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十八：长春围城惨案](../../pages/nsc1028/n13753340.md) 
 #### [王友群：江泽民被揭“二奸二假”的历史回顾](../../pages/nsc1028/n13752541.md) 
 #### [楚一丁：端午戏言——假如屈原和孔子活在当代](../../pages/nsc1028/n13751814.md) 
 #### [王友群：原中共上将房峰辉沦为阶下囚之谜](../../pages/nsc1028/n13746271.md) 
@@ -29,7 +30,6 @@
 #### [王友群：江泽民孙子是如何“闷声发大财”的？](../../pages/nsc1028/n13693213.md) 
 #### [我们从小到大学到的历史哪些是假的（16）](../../pages/nsc1028/n13692503.md) 
 #### [中共罪行录之七十五：叛徒、内奸、工贼刘少奇](../../pages/nsc1028/n13688599.md) 
-#### [张菁：西安政变“功臣”刘鼎被中共整的很惨](../../pages/nsc1028/n13679371.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
