--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [韩笑：“共产党太腐败了” 上海退伍老兵声言退党](../../pages/nsc993/n13756509.md) 
+#### [呼吁国际社会关注唐吉田律师被非法长时间维稳羁押事件](../../pages/nsc993/n13756423.md) 
+#### [【网海拾贝】中共离崩溃还有多久？](../../pages/nsc993/n13756396.md) 
+#### [何良懋：中共战机骚扰加澳 走向军国主义化](../../pages/nsc993/n13756358.md) 
 #### [网友怼王毅：中美关系的“恶化”究竟是谁造成的？](../../pages/nsc993/n13754895.md) 
 #### [三张照片，见证上海封城的反人性](../../pages/nsc993/n13754862.md) 
 #### [【网海拾贝】六四事件，对百姓开枪的士兵一个也没死](../../pages/nsc993/n13754786.md) 
@@ -26,10 +30,6 @@
 #### [网民：又要封城又要稳经济，弄着玩呢？](../../pages/nsc993/n13747327.md) 
 #### [市民：疫情防控好，北京真的做到了？](../../pages/nsc993/n13746694.md) 
 #### [【网海拾贝】上海封城是一部世界滑稽戏](../../pages/nsc993/n13746605.md) 
-#### [吐为快：红朝说不](../../pages/nsc993/n13746172.md) 
-#### [筑梦华裔青年Jane Jin 谈广告创意之用](../../pages/nsc993/n13743806.md) 
-#### [新唐人华人美声声乐大赛 填补音乐界空白](../../pages/nsc993/n13746123.md) 
-#### [企业负责人：一刀切下，上海微小企业有多难？](../../pages/nsc993/n13745707.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
