--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [警察将兼任学校副校长，网友：“全面进入警察社会”](../../pages/nsc993/n13756603.md) 
+#### [全美学自联2022年自由精神奖给齐志勇先生的颁奖词](../../pages/nsc993/n13757085.md) 
+#### [祝君安：天仙子·最后审判日益近](../../pages/nsc993/n13757082.md) 
 #### [韩笑：“共产党太腐败了” 上海退伍老兵声言退党](../../pages/nsc993/n13756509.md) 
 #### [呼吁国际社会关注唐吉田律师被非法长时间维稳羁押事件](../../pages/nsc993/n13756423.md) 
 #### [【网海拾贝】中共离崩溃还有多久？](../../pages/nsc993/n13756396.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】大批军人撤离上海，显出大白的原形](../../pages/nsc993/n13749184.md) 
 #### [网民斥常态化核酸检测自费：吃相越来越难看了](../../pages/nsc993/n13749170.md) 
 #### [【网海拾贝】“世界人民都知道”病根，就是没人敢说](../../pages/nsc993/n13747347.md) 
-#### [网民：又要封城又要稳经济，弄着玩呢？](../../pages/nsc993/n13747327.md) 
-#### [市民：疫情防控好，北京真的做到了？](../../pages/nsc993/n13746694.md) 
-#### [【网海拾贝】上海封城是一部世界滑稽戏](../../pages/nsc993/n13746605.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
