--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [唐山打人事件，别让女权掩盖了中共本质](../../pages/nsc1028/n13757588.md) 
+#### [中共罪行录之七十九：崇礼血案](../../pages/nsc1028/n13757521.md) 
+#### [王友群：聂树斌被冤杀27年无一人被追责之谜](../../pages/nsc1028/n13757410.md) 
 #### [中共罪行录之七十八：长春围城惨案](../../pages/nsc1028/n13753340.md) 
 #### [王友群：江泽民被揭“二奸二假”的历史回顾](../../pages/nsc1028/n13752541.md) 
 #### [楚一丁：端午戏言——假如屈原和孔子活在当代](../../pages/nsc1028/n13751814.md) 
@@ -27,9 +30,6 @@
 #### [王友群：上海法官警官富商连环被杀之谜](../../pages/nsc1028/n13712763.md) 
 #### [王友群：中南海大秘王维工被判死缓之谜](../../pages/nsc1028/n13705201.md) 
 #### [林辉：中共洗脑老电影 主创人员遭迫害](../../pages/nsc1028/n13699437.md) 
-#### [王友群：江泽民孙子是如何“闷声发大财”的？](../../pages/nsc1028/n13693213.md) 
-#### [我们从小到大学到的历史哪些是假的（16）](../../pages/nsc1028/n13692503.md) 
-#### [中共罪行录之七十五：叛徒、内奸、工贼刘少奇](../../pages/nsc1028/n13688599.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
