--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [楚一丁：借道虎山 与中共国安打交道的经历](../../pages/nsc1035/n13757589.md) 
 #### [清竹：他是怎样从流浪汉变成了一个高贵的人？](../../pages/nsc1035/n13757096.md) 
 #### [小天：如何从疫情的牢笼中走出？](../../pages/nsc1035/n13744630.md) 
 #### [项云：“清零”是夯实专政维稳工具和手段，病毒是借口和机会](../../pages/nsc1035/n13737954.md) 
@@ -29,7 +30,6 @@
 #### [影评：我在为谁伤感落泪？](../../pages/nsc1035/n13594614.md) 
 #### [林青：法拉盛的历史 为美国的信仰自由奠基](../../pages/nsc1035/n13593675.md) 
 #### [影评：越来越明朗的希望——观贺岁片《聚会（2）》](../../pages/nsc1035/n13580867.md) 
-#### [颜纯钩：看《时代革命》百感交集 向导演致敬](../../pages/nsc1035/n13574843.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
