--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】谁是唐山打人案惯犯累犯背后的保护伞？](../../pages/nsc993/n13759258.md) 
+#### [张肯之：浅谈八九六四与李佳琦事件](../../pages/nsc993/n13759194.md) 
 #### [“流浪”的罹难知青纪念碑 逃港幸存者忆当年](../../pages/nsc993/n13758168.md) 
 #### [【网海拾贝】我们赶上了一个见证奇迹的时代](../../pages/nsc993/n13757535.md) 
 #### [警察将兼任学校副校长，网友：“全面进入警察社会”](../../pages/nsc993/n13756603.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】经济被清零掏空后，中国人只会喝西北风了](../../pages/nsc993/n13750791.md) 
 #### [王丹：纪念“六四”三十三周年的公开信](../../pages/nsc993/n13750161.md) 
 #### [吴绍平律师：抗疫，抗议](../../pages/nsc993/n13750135.md) 
-#### [三个故事，说尽上海癌症患者封城下的无助](../../pages/nsc993/n13749222.md) 
-#### [【网海拾贝】大批军人撤离上海，显出大白的原形](../../pages/nsc993/n13749184.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
