--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [长风拂泪：观无声电影《一张传单》](../../pages/nsc1035/n13759939.md) 
 #### [楚一丁：借道虎山 与中共国安打交道的经历](../../pages/nsc1035/n13757589.md) 
 #### [清竹：他是怎样从流浪汉变成了一个高贵的人？](../../pages/nsc1035/n13757096.md) 
 #### [小天：如何从疫情的牢笼中走出？](../../pages/nsc1035/n13744630.md) 
@@ -29,7 +30,6 @@
 #### [云昭：走进窄门的梁小军](../../pages/nsc1035/n13605425.md) 
 #### [影评：我在为谁伤感落泪？](../../pages/nsc1035/n13594614.md) 
 #### [林青：法拉盛的历史 为美国的信仰自由奠基](../../pages/nsc1035/n13593675.md) 
-#### [影评：越来越明朗的希望——观贺岁片《聚会（2）》](../../pages/nsc1035/n13580867.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
