--- a/indexes/nsc1025/194.md
+++ b/indexes/nsc1025/194.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：唐山受伤女孩照片被掉包 当局造假](../../pages/nsc1025/n13762381.md) 
+#### [王赫：中共海军转型有三难](../../pages/nsc1025/n13762057.md) 
+#### [钟原：党媒宣传习近平主导经济却露实情](../../pages/nsc1025/n13762108.md) 
+#### [王友群：“中南海头号大案”终于要开审了](../../pages/nsc1025/n13761877.md) 
+#### [【名家专栏】抛售人民币 外国投资者逃离中国](../../pages/nsc1025/n13761777.md) 
 #### [颜丹：中共唱衰美欧 中国人以“润”作答](../../pages/nsc1025/n13761830.md) 
 #### [【名家专栏】印度能否成为亚洲经济引擎？](../../pages/nsc1025/n13761754.md) 
 #### [【名家专栏】为何今年父亲节比往年更重要](../../pages/nsc1025/n13761753.md) 
@@ -25,11 +30,6 @@
 #### [周晓辉：唐山黑势力为何几十年屡禁不绝？](../../pages/nsc1025/n13758927.md) 
 #### [颜宝刚：上海真的回来了吗？外资逃离中国掀起失业潮](../../pages/nsc1025/n13759177.md) 
 #### [杨宁：唐山烧烤店无人见义勇为的背后](../../pages/nsc1025/n13758955.md) 
-#### [【名家专栏】宪政原旨主义者深爱美国](../../pages/nsc1025/n13757798.md) 
-#### [【名家专栏】美国家庭消费将大幅放缓](../../pages/nsc1025/n13758718.md) 
-#### [谭笑飞：闲谈中共的警察社会](../../pages/nsc1025/n13758509.md) 
-#### [宇清：病毒至今未去 民心却已丧失](../../pages/nsc1025/n13758370.md) 
-#### [沈舟：美国构建印太军事框架直指中共](../../pages/nsc1025/n13758167.md) 
 
 ---
 #### 第 [ [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) ] 页
