--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】小流氓横行，是因为大流氓当道](../../pages/nsc993/n13762217.md) 
 #### [张菁：一日两起残害女性案 官媒一放一收为哪般？](../../pages/nsc993/n13761611.md) 
 #### [【网海拾贝】中共是最大黑社会](../../pages/nsc993/n13760791.md) 
 #### [【网海拾贝】谁是唐山打人案惯犯累犯背后的保护伞？](../../pages/nsc993/n13759258.md) 
@@ -29,7 +30,6 @@
 #### [六四周年 媒体人：烛光不会灭 历史不会忘](../../pages/nsc993/n13751264.md) 
 #### [吐为快：端午祭六四（外一首）](../../pages/nsc993/n13751218.md) 
 #### [网民：以前的上海再也回不来了](../../pages/nsc993/n13750818.md) 
-#### [【网海拾贝】经济被清零掏空后，中国人只会喝西北风了](../../pages/nsc993/n13750791.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
