have a nice day!

--- a/indexes/nsc1025/195.md
+++ b/indexes/nsc1025/195.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [美国两代进步主义运动：从行政国家到深层政府](../../pages/nsc1025/n13762932.md) 
+#### [王友群：政法亿元大贪官 王立科终上审判台](../../pages/nsc1025/n13762583.md) 
+#### [沈舟：美军精锐齐出 演示台湾保卫战](../../pages/nsc1025/n13762508.md) 
+#### [【名家专栏】医生不愿进行堕胎手术](../../pages/nsc1025/n13762323.md) 
 #### [【名家专栏】父亲在社会和家庭中的责任](../../pages/nsc1025/n13762321.md) 
 #### [周晓辉：唐山受伤女孩照片被掉包 当局造假](../../pages/nsc1025/n13762381.md) 
 #### [王赫：中共海军转型有三难](../../pages/nsc1025/n13762057.md) 
@@ -26,10 +30,6 @@
 #### [杨威：中美关系已经过了关键的“十字路口”](../../pages/nsc1025/n13759798.md) 
 #### [周晓辉：唐山打人事件后现六个诡异之处](../../pages/nsc1025/n13759629.md) 
 #### [颜丹：韩片《空气杀人》唤醒中国人记忆](../../pages/nsc1025/n13759596.md) 
-#### [【名家专栏】台湾必须汲取乌克兰宝贵经验](../../pages/nsc1025/n13759403.md) 
-#### [袁斌：恶性案件频出，这样的中国能给人安全感吗？](../../pages/nsc1025/n13759199.md) 
-#### [周晓辉：唐山黑势力为何几十年屡禁不绝？](../../pages/nsc1025/n13758927.md) 
-#### [颜宝刚：上海真的回来了吗？外资逃离中国掀起失业潮](../../pages/nsc1025/n13759177.md) 
 
 ---
-#### 第 [ [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) / [187](./187.md) ] 页
+#### 第 [ [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) ] 页
