--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】学生应拜访共产主义受难者纪念馆](../../pages/nsc1028/n13762812.md) 
 #### [林辉：抗战时替毛发声的三名记者 后未逃脱迫害](../../pages/nsc1028/n13761727.md) 
 #### [唐山打人事件，别让女权掩盖了中共本质](../../pages/nsc1028/n13757588.md) 
 #### [中共罪行录之七十九：崇礼血案](../../pages/nsc1028/n13757521.md) 
@@ -29,7 +30,6 @@
 #### [张青：从编造“细菌战”到隐瞒新冠病毒源头](../../pages/nsc1028/n13713424.md) 
 #### [张成觉：江楠惨过窦娥冤](../../pages/nsc1028/n13713593.md) 
 #### [王友群：上海法官警官富商连环被杀之谜](../../pages/nsc1028/n13712763.md) 
-#### [王友群：中南海大秘王维工被判死缓之谜](../../pages/nsc1028/n13705201.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
