have a nice day!

--- a/indexes/nsc1025/195.md
+++ b/indexes/nsc1025/195.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [张菁： 唐山打人事件中的丰县维稳手法](../../pages/nsc1025/n13764437.md) 
+#### [【名家专栏】经济灾难的根源在于封锁](../../pages/nsc1025/n13763858.md) 
+#### [【征文选登】论共产党对全中国的毁灭](../../pages/nsc1025/n13764114.md) 
+#### [陈思敏：河北扫黑“回头看” 习近平被阳奉阴违](../../pages/nsc1025/n13764082.md) 
+#### [乾元：唐山与中国钢铁产业格局](../../pages/nsc1025/n13764071.md) 
+#### [杨威：神秘三星堆文化正惨遭政治扭曲](../../pages/nsc1025/n13763893.md) 
+#### [许茹：从助力公安部的科学家猝死再说报应](../../pages/nsc1025/n13763696.md) 
+#### [周晓辉：哈国总统语出惊人 让普京习近平都尴尬](../../pages/nsc1025/n13763706.md) 
 #### [【名家专栏】俄乌战争的根源与目的](../../pages/nsc1025/n13763508.md) 
 #### [【名家专栏】终止远程办公模式 回到办公室](../../pages/nsc1025/n13763506.md) 
 #### [石铭：怀念因信仰而被迫害致死的父亲们](../../pages/nsc1025/n13763349.md) 
@@ -22,14 +30,6 @@
 #### [王友群：“中南海头号大案”终于要开审了](../../pages/nsc1025/n13761877.md) 
 #### [【名家专栏】抛售人民币 外国投资者逃离中国](../../pages/nsc1025/n13761777.md) 
 #### [颜丹：中共唱衰美欧 中国人以“润”作答](../../pages/nsc1025/n13761830.md) 
-#### [【名家专栏】印度能否成为亚洲经济引擎？](../../pages/nsc1025/n13761754.md) 
-#### [【名家专栏】为何今年父亲节比往年更重要](../../pages/nsc1025/n13761753.md) 
-#### [石铭：从老人们悲惨遭遇看中共的邪恶本质](../../pages/nsc1025/n13761601.md) 
-#### [王赫：美全面军事转型 锁住中共](../../pages/nsc1025/n13761307.md) 
-#### [周晓辉：唐山女孩生死成谜 丢失监控藏血腥](../../pages/nsc1025/n13761555.md) 
-#### [王友群：二十大前中共“笔杆子”大变动分析](../../pages/nsc1025/n13761334.md) 
-#### [夏林：美国“1月6日委员会”让人迷惑](../../pages/nsc1025/n13761126.md) 
-#### [【名家专栏】经济崩溃的几个阶段](../../pages/nsc1025/n13760780.md) 
 
 ---
 #### 第 [ [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) ] 页
