have a nice day!

--- a/indexes/nsc1025/195.md
+++ b/indexes/nsc1025/195.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：说说“唐山文明城市资格被停止”](../../pages/nsc1025/n13765231.md) 
+#### [岳山：北戴河会前 李克强权力蛋糕被瓜分内幕](../../pages/nsc1025/n13765241.md) 
+#### [金泰宇：韩国总统出席北约峰会的意义与任务](../../pages/nsc1025/n13764989.md) 
+#### [王赫：“唐山打人事件”再证中共必须解体](../../pages/nsc1025/n13764774.md) 
+#### [周晓辉：河北公安厅发通报 唐山事件难有真相](../../pages/nsc1025/n13764484.md) 
+#### [【名家专栏】中国要回到毛主义时代吗？](../../pages/nsc1025/n13764319.md) 
 #### [张菁： 唐山打人事件中的丰县维稳手法](../../pages/nsc1025/n13764437.md) 
 #### [【名家专栏】经济灾难的根源在于封锁](../../pages/nsc1025/n13763858.md) 
 #### [【征文选登】论共产党对全中国的毁灭](../../pages/nsc1025/n13764114.md) 
@@ -24,12 +30,6 @@
 #### [沈舟：美军精锐齐出 演示台湾保卫战](../../pages/nsc1025/n13762508.md) 
 #### [【名家专栏】医生不愿进行堕胎手术](../../pages/nsc1025/n13762323.md) 
 #### [【名家专栏】父亲在社会和家庭中的责任](../../pages/nsc1025/n13762321.md) 
-#### [周晓辉：唐山受伤女孩照片被掉包 当局造假](../../pages/nsc1025/n13762381.md) 
-#### [王赫：中共海军转型有三难](../../pages/nsc1025/n13762057.md) 
-#### [钟原：党媒宣传习近平主导经济却露实情](../../pages/nsc1025/n13762108.md) 
-#### [王友群：“中南海头号大案”终于要开审了](../../pages/nsc1025/n13761877.md) 
-#### [【名家专栏】抛售人民币 外国投资者逃离中国](../../pages/nsc1025/n13761777.md) 
-#### [颜丹：中共唱衰美欧 中国人以“润”作答](../../pages/nsc1025/n13761830.md) 
 
 ---
 #### 第 [ [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) / [188](./188.md) ] 页
