--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [南岛：罗大佑歌中的“亚细亚的孤儿”指谁？](../../pages/nsc1035/n13765051.md) 
+#### [吴吕南：与林郑决绝书](../../pages/nsc1035/n13764053.md) 
 #### [袁斌：巴赫《无伴奏大提琴组曲》最著名的一次亮相](../../pages/nsc1035/n13762193.md) 
 #### [长风拂泪：观无声电影《一张传单》](../../pages/nsc1035/n13759939.md) 
 #### [楚一丁：借道虎山 与中共国安打交道的经历](../../pages/nsc1035/n13757589.md) 
@@ -28,8 +30,6 @@
 #### [奥运史上的人性之光](../../pages/nsc1035/n13627118.md) 
 #### [云昭：谢燕益的道](../../pages/nsc1035/n13607391.md) 
 #### [簿岚澄：观《过年Ⅱ》随想](../../pages/nsc1035/n13606884.md) 
-#### [云昭：走进窄门的梁小军](../../pages/nsc1035/n13605425.md) 
-#### [影评：我在为谁伤感落泪？](../../pages/nsc1035/n13594614.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
