--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】政治局会议，18名委员竟有7人缺席](../../pages/nsc993/n13765085.md) 
+#### [网友九问唐山：请公布四个被打女孩现状](../../pages/nsc993/n13764890.md) 
 #### [【网海拾贝】台湾是世界不可分割的一部分](../../pages/nsc993/n13763337.md) 
 #### [【网海拾贝】小流氓横行，是因为大流氓当道](../../pages/nsc993/n13762217.md) 
 #### [张菁：一日两起残害女性案 官媒一放一收为哪般？](../../pages/nsc993/n13761611.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】2022年度最大黑色幽默和魔幻现实](../../pages/nsc993/n13752233.md) 
 #### [接种疫苗后确诊1型糖尿病，600多家长求救](../../pages/nsc993/n13752221.md) 
 #### [接海外退党义工电话 欲报警的他退出中共](../../pages/nsc993/n13750442.md) 
-#### [六四周年 媒体人：烛光不会灭 历史不会忘](../../pages/nsc993/n13751264.md) 
-#### [吐为快：端午祭六四（外一首）](../../pages/nsc993/n13751218.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
