--- a/indexes/nsc1025/196.md
+++ b/indexes/nsc1025/196.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：习近平称坚持开放 动态清零是障碍](../../pages/nsc1025/n13766902.md) 
+#### [【名家专栏】美议员质问为何急于推儿童疫苗令](../../pages/nsc1025/n13766766.md) 
+#### [王友群：继续迫害法轮功 中共所有乱局无解](../../pages/nsc1025/n13766412.md) 
+#### [王赫：拜登政府对华政策的教科书](../../pages/nsc1025/n13766222.md) 
+#### [周晓辉：涉红码郑州政法委官员被轻罚 背后有鬼](../../pages/nsc1025/n13766090.md) 
+#### [【纪元专栏】移民加拿大 就是加拿大人](../../pages/nsc1025/n13740942.md) 
+#### [夏林：股市崩跌，害怕了吗？](../../pages/nsc1025/n13766098.md) 
 #### [郝平：习李同谈经济不同调 地方怪招频出救经济](../../pages/nsc1025/n13766069.md) 
 #### [【名家专栏】电影《沉默呼声》让我夜不能寐](../../pages/nsc1025/n13765897.md) 
 #### [【有冇搞错】AI和人类的不归路](../../pages/nsc1025/n13765383.md) 
@@ -23,13 +30,6 @@
 #### [【名家专栏】终止远程办公模式 回到办公室](../../pages/nsc1025/n13763506.md) 
 #### [石铭：怀念因信仰而被迫害致死的父亲们](../../pages/nsc1025/n13763349.md) 
 #### [王友群：曾庆红提拔的三个大法官落马之回顾](../../pages/nsc1025/n13763196.md) 
-#### [袁斌：由记者被警察按头下跪看唐山的法治生态](../../pages/nsc1025/n13763152.md) 
-#### [李承鹏：中国人为什么没有安全感](../../pages/nsc1025/n13762977.md) 
-#### [【名家专栏】国会大厦事件委员会的作秀审判](../../pages/nsc1025/n13762573.md) 
-#### [周晓辉：钟南山没打疫苗被抓包？](../../pages/nsc1025/n13763007.md) 
-#### [颜丹：驳美驻华大使言论 外交部谎话连篇](../../pages/nsc1025/n13762969.md) 
-#### [金言：疑点重重 谁是唐山黑恶势力保护伞？](../../pages/nsc1025/n13762953.md) 
-#### [郝平：唐山打人案 中共五大诡异维稳手法](../../pages/nsc1025/n13762972.md) 
 
 ---
 #### 第 [ [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) ] 页
