--- a/indexes/nsc1026/53.md
+++ b/indexes/nsc1026/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [谢田：中国银行挤兑会恶化到何种程度?](../../pages/nsc1026/n13766965.md) 
 #### [王赫：外贸外资稳不住中国经济](../../pages/nsc1026/n13753933.md) 
 #### [吴惠林：正念因应通货膨胀](../../pages/nsc1026/n13750350.md) 
 #### [陈思敏：中概股退市风暴 中共稳得住吗](../../pages/nsc1026/n13738978.md) 
@@ -29,7 +30,6 @@
 #### [【谈股论金】美联储三重紧缩 金融市场吹寒风](../../pages/nsc1026/n13487202.md) 
 #### [王赫：2022中国经济令人忧心](../../pages/nsc1026/n13480433.md) 
 #### [【谈股论金】再谈暴涨暴跌的比特币](../../pages/nsc1026/n13428036.md) 
-#### [【美股瞭望】1920年代美股大行情会重现吗？](../../pages/nsc1026/n13425425.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
