have a nice day!

--- a/indexes/nsc1025/196.md
+++ b/indexes/nsc1025/196.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共武器占国际市场份额低迷](../../pages/nsc1025/n13767741.md) 
+#### [何清涟：美国民主一线命脉悬在投票机上](../../pages/nsc1025/n13767898.md) 
+#### [袁斌：所谓丹东袭警案，其实是警察打人案](../../pages/nsc1025/n13767402.md) 
+#### [王友群：习近平近期应对反习势力的四大举措](../../pages/nsc1025/n13767027.md) 
+#### [【名家专栏】保守派用钱包反击左倾政策](../../pages/nsc1025/n13767344.md) 
 #### [周晓辉：上海书记高唱赞歌 引火烧向中南海](../../pages/nsc1025/n13767399.md) 
 #### [颜丹：透视中国女富豪去意大利买豪宅](../../pages/nsc1025/n13767381.md) 
 #### [岳山：王小洪还有不寻常安排 或一年三级跳](../../pages/nsc1025/n13767350.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】中国要回到毛主义时代吗？](../../pages/nsc1025/n13764319.md) 
 #### [张菁： 唐山打人事件中的丰县维稳手法](../../pages/nsc1025/n13764437.md) 
 #### [【名家专栏】经济灾难的根源在于封锁](../../pages/nsc1025/n13763858.md) 
-#### [【征文选登】论共产党对全中国的毁灭](../../pages/nsc1025/n13764114.md) 
-#### [陈思敏：河北扫黑“回头看” 习近平被阳奉阴违](../../pages/nsc1025/n13764082.md) 
-#### [乾元：唐山与中国钢铁产业格局](../../pages/nsc1025/n13764071.md) 
-#### [杨威：神秘三星堆文化正惨遭政治扭曲](../../pages/nsc1025/n13763893.md) 
-#### [许茹：从助力公安部的科学家猝死再说报应](../../pages/nsc1025/n13763696.md) 
 
 ---
 #### 第 [ [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) / [189](./189.md) ] 页
