--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】八旬妇生日吃不上面 “中国奇迹”令人震惊](../../pages/nsc993/n13767479.md) 
 #### [丹东封控近两月 当地人：太惨了，纯粹人祸](../../pages/nsc993/n13766621.md) 
 #### [【网海拾贝】这不是一个红码，这是一座监狱](../../pages/nsc993/n13766606.md) 
 #### [一个作家在上海封城中的思考](../../pages/nsc993/n13766570.md) 
@@ -29,7 +30,6 @@
 #### [李仪莲：真相电话传福音 有缘人不负苦劝终三退](../../pages/nsc993/n13753255.md) 
 #### [吕千荣：点燃蜡烛，今夜我为天使们守灵](../../pages/nsc993/n13753239.md) 
 #### [长风：锤镰伤天论](../../pages/nsc993/n13753220.md) 
-#### [东方慧：于无声处听惊雷——“这是我们最后一代”](../../pages/nsc993/n13753047.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
