--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】外国受害者昭示 中共司法不可信](../../pages/nsc1028/n13767326.md) 
 #### [【名家专栏】TikTok——极易上瘾的鸦片](../../pages/nsc1028/n13766769.md) 
 #### [【名家专栏】学生应拜访共产主义受难者纪念馆](../../pages/nsc1028/n13762812.md) 
 #### [林辉：抗战时替毛发声的三名记者 后未逃脱迫害](../../pages/nsc1028/n13761727.md) 
@@ -29,7 +30,6 @@
 #### [王友群：毛泽东发动的“挖祖坟”运动](../../pages/nsc1028/n13723639.md) 
 #### [王友群：韩正与上海“小红楼”、孙力军及其他](../../pages/nsc1028/n13719454.md) 
 #### [张青：从编造“细菌战”到隐瞒新冠病毒源头](../../pages/nsc1028/n13713424.md) 
-#### [张成觉：江楠惨过窦娥冤](../../pages/nsc1028/n13713593.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
