--- a/indexes/nsc1025/197.md
+++ b/indexes/nsc1025/197.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】极权主义发展的五个阶段](../../pages/nsc1025/n13769252.md) 
+#### [周晓辉：南方洪灾严重 柬埔寨国王慰问凸显一事](../../pages/nsc1025/n13769409.md) 
+#### [张菁：“清零”致外资撤离 供应链外迁](../../pages/nsc1025/n13769394.md) 
+#### [黎明：中小学“毒教材”知多少？](../../pages/nsc1025/n13769371.md) 
+#### [王赫：王小洪任公安部长的三点解读](../../pages/nsc1025/n13768846.md) 
+#### [王友群：曾庆红遭重创的标志性事件之回顾](../../pages/nsc1025/n13767460.md) 
+#### [同根、古金：大数据否定新冠疫苗防重症（下）](../../pages/nsc1025/n13768646.md) 
+#### [【名家专栏】重提毛主义无异于杀鸡取卵](../../pages/nsc1025/n13768484.md) 
+#### [【名家专栏】最高院推翻罗诉韦德案后的反思](../../pages/nsc1025/n13768485.md) 
+#### [【纪元专栏】在加拿大国庆日 我想要什么？](../../pages/nsc1025/n13768701.md) 
+#### [【纪元专栏】特鲁多应远离美国最高法院判决](../../pages/nsc1025/n13768681.md) 
 #### [周晓辉：蔡奇报告自相矛盾 新政策让北京人傻眼](../../pages/nsc1025/n13768667.md) 
 #### [吴惠林：“歧视”究竟是啥？](../../pages/nsc1025/n13768444.md) 
 #### [刘利：透过房地产现状看中国经济本质](../../pages/nsc1025/n13768374.md) 
@@ -19,17 +30,6 @@
 #### [颜丹：透视中国女富豪去意大利买豪宅](../../pages/nsc1025/n13767381.md) 
 #### [岳山：王小洪还有不寻常安排 或一年三级跳](../../pages/nsc1025/n13767350.md) 
 #### [王赫：河南红码事件与中共“数字极权”](../../pages/nsc1025/n13767216.md) 
-#### [沈舟：舰载机仍是003航母的最大短板](../../pages/nsc1025/n13767125.md) 
-#### [周晓辉：习近平称坚持开放 动态清零是障碍](../../pages/nsc1025/n13766902.md) 
-#### [【名家专栏】美议员质问为何急于推儿童疫苗令](../../pages/nsc1025/n13766766.md) 
-#### [王友群：继续迫害法轮功 中共所有乱局无解](../../pages/nsc1025/n13766412.md) 
-#### [王赫：拜登政府对华政策的教科书](../../pages/nsc1025/n13766222.md) 
-#### [周晓辉：涉红码郑州政法委官员被轻罚 背后有鬼](../../pages/nsc1025/n13766090.md) 
-#### [【纪元专栏】移民加拿大 就是加拿大人](../../pages/nsc1025/n13740942.md) 
-#### [夏林：股市崩跌，害怕了吗？](../../pages/nsc1025/n13766098.md) 
-#### [郝平：习李同谈经济不同调 地方怪招频出救经济](../../pages/nsc1025/n13766069.md) 
-#### [【名家专栏】电影《沉默呼声》让我夜不能寐](../../pages/nsc1025/n13765897.md) 
-#### [【有冇搞错】AI和人类的不归路](../../pages/nsc1025/n13765383.md) 
 
 ---
 #### 第 [ [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) ] 页
