--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】盛世的奴才减薪，奴隶减寿！](../../pages/nsc993/n13770596.md) 
+#### [老许：东方网力退市迷雾](../../pages/nsc993/n13770632.md) 
+#### [理悟：这是幸福满满的共产社会吗](../../pages/nsc993/n13770623.md) 
 #### [【网海拾贝】如今谁上谁下都救不了中共](../../pages/nsc993/n13769122.md) 
 #### [金浴凤：有一种红色之症叫党瘟](../../pages/nsc993/n13768183.md) 
 #### [【网海拾贝】八旬妇生日吃不上面 “中国奇迹”令人震惊](../../pages/nsc993/n13767479.md) 
@@ -27,9 +30,6 @@
 #### [三张照片，见证上海封城的反人性](../../pages/nsc993/n13754862.md) 
 #### [【网海拾贝】六四事件，对百姓开枪的士兵一个也没死](../../pages/nsc993/n13754786.md) 
 #### [诸葛高参：中国梦不是超越美国](../../pages/nsc993/n13753666.md) 
-#### [【网海拾贝】六四天安门有没有死人？在场学生说肯定有](../../pages/nsc993/n13753395.md) 
-#### [林泉：六四屠城三十三周年祭](../../pages/nsc993/n13753318.md) 
-#### [李仪莲：真相电话传福音 有缘人不负苦劝终三退](../../pages/nsc993/n13753255.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
