have a nice day!

--- a/indexes/nsc1025/198.md
+++ b/indexes/nsc1025/198.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】为何堕胎权回归各州是左翼的灾难](../../pages/nsc1025/n13771507.md) 
+#### [颜丹：“向二十大建言”是最新版的皇帝新装](../../pages/nsc1025/n13771580.md) 
+#### [【名家专栏】中共的“元宇宙”或走向反乌托邦](../../pages/nsc1025/n13770486.md) 
+#### [田云：中共七一自嗨 中宣部新闻发布会透实情](../../pages/nsc1025/n13771086.md) 
+#### [杨威：与北约敌对 中共高层再误判](../../pages/nsc1025/n13771172.md) 
 #### [韩笑：苦口相劝见真诚 唤醒中国人良善](../../pages/nsc1025/n13770946.md) 
 #### [何清涟：全球化蜕变为大重置 终成世界祸害](../../pages/nsc1025/n13770969.md) 
 #### [楚一丁：美国的“一中”政策正在发生改变吗？](../../pages/nsc1025/n13770935.md) 
@@ -25,11 +30,6 @@
 #### [王赫：王小洪任公安部长的三点解读](../../pages/nsc1025/n13768846.md) 
 #### [王友群：曾庆红遭重创的标志性事件之回顾](../../pages/nsc1025/n13767460.md) 
 #### [同根、古金：大数据否定新冠疫苗防重症（下）](../../pages/nsc1025/n13768646.md) 
-#### [【名家专栏】重提毛主义无异于杀鸡取卵](../../pages/nsc1025/n13768484.md) 
-#### [【名家专栏】最高院推翻罗诉韦德案后的反思](../../pages/nsc1025/n13768485.md) 
-#### [【纪元专栏】在加拿大国庆日 我想要什么？](../../pages/nsc1025/n13768701.md) 
-#### [【纪元专栏】特鲁多应远离美国最高法院判决](../../pages/nsc1025/n13768681.md) 
-#### [周晓辉：蔡奇报告自相矛盾 新政策让北京人傻眼](../../pages/nsc1025/n13768667.md) 
 
 ---
-#### 第 [ [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) / [190](./190.md) ] 页
+#### 第 [ [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) ] 页
