--- a/indexes/nsc1025/198.md
+++ b/indexes/nsc1025/198.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [玉清心：透视北京武警总院给日本人换肝一案](../../pages/nsc1025/n13771978.md) 
+#### [【名家专栏】海外投资者失去对中共的信心](../../pages/nsc1025/n13772145.md) 
+#### [王赫：北约“战略新概念”如何应对中共？](../../pages/nsc1025/n13771986.md) 
+#### [【名家专栏】美《第二修正案》意见的深层意义](../../pages/nsc1025/n13772162.md) 
+#### [钟原：习近平香港之行泄漏了哪些实情？](../../pages/nsc1025/n13771881.md) 
 #### [【名家专栏】为何堕胎权回归各州是左翼的灾难](../../pages/nsc1025/n13771507.md) 
 #### [颜丹：“向二十大建言”是最新版的皇帝新装](../../pages/nsc1025/n13771580.md) 
 #### [【名家专栏】中共的“元宇宙”或走向反乌托邦](../../pages/nsc1025/n13770486.md) 
@@ -25,11 +30,6 @@
 #### [王友群：新任公安部长王小洪的前车之鉴](../../pages/nsc1025/n13769534.md) 
 #### [【名家专栏】极权主义发展的五个阶段](../../pages/nsc1025/n13769252.md) 
 #### [周晓辉：南方洪灾严重 柬埔寨国王慰问凸显一事](../../pages/nsc1025/n13769409.md) 
-#### [张菁：“清零”致外资撤离 供应链外迁](../../pages/nsc1025/n13769394.md) 
-#### [黎明：中小学“毒教材”知多少？](../../pages/nsc1025/n13769371.md) 
-#### [王赫：王小洪任公安部长的三点解读](../../pages/nsc1025/n13768846.md) 
-#### [王友群：曾庆红遭重创的标志性事件之回顾](../../pages/nsc1025/n13767460.md) 
-#### [同根、古金：大数据否定新冠疫苗防重症（下）](../../pages/nsc1025/n13768646.md) 
 
 ---
 #### 第 [ [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) ] 页
