--- a/indexes/nsc993/82.md
+++ b/indexes/nsc993/82.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平到港，红旗倒挂，全港空巷](../../pages/nsc993/n13772006.md) 
+#### [袁斌：丹东九旬老人为何在社区门口上吊自杀](../../pages/nsc993/n13772003.md) 
 #### [【网海拾贝】盛世的奴才减薪，奴隶减寿！](../../pages/nsc993/n13770596.md) 
 #### [老许：东方网力退市迷雾](../../pages/nsc993/n13770632.md) 
 #### [理悟：这是幸福满满的共产社会吗](../../pages/nsc993/n13770623.md) 
@@ -28,8 +30,6 @@
 #### [何良懋：中共战机骚扰加澳 走向军国主义化](../../pages/nsc993/n13756358.md) 
 #### [网友怼王毅：中美关系的“恶化”究竟是谁造成的？](../../pages/nsc993/n13754895.md) 
 #### [三张照片，见证上海封城的反人性](../../pages/nsc993/n13754862.md) 
-#### [【网海拾贝】六四事件，对百姓开枪的士兵一个也没死](../../pages/nsc993/n13754786.md) 
-#### [诸葛高参：中国梦不是超越美国](../../pages/nsc993/n13753666.md) 
 
 ---
 #### 第 [ [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) ] 页
