have a nice day!

--- a/indexes/nsc1025/198.md
+++ b/indexes/nsc1025/198.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】支持堕胎的精英严重脱离大众](../../pages/nsc1025/n13772648.md) 
+#### [【名家专栏】美国通货膨胀的其它原因](../../pages/nsc1025/n13772617.md) 
+#### [楚一丁：党主抗疫与民主抗疫之面面观](../../pages/nsc1025/n13772493.md) 
+#### [周晓辉：香港再开放也无济于事 世界不会再上当](../../pages/nsc1025/n13772307.md) 
 #### [玉清心：透视北京武警总院给日本人换肝一案](../../pages/nsc1025/n13771978.md) 
 #### [【名家专栏】海外投资者失去对中共的信心](../../pages/nsc1025/n13772145.md) 
 #### [王赫：北约“战略新概念”如何应对中共？](../../pages/nsc1025/n13771986.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】中国五月出口激增 长远意义不大](../../pages/nsc1025/n13769982.md) 
 #### [岳山：李强若进京 上海官场势力版图怎么变？](../../pages/nsc1025/n13769948.md) 
 #### [王赫：中国经济大盘已难稳](../../pages/nsc1025/n13769665.md) 
-#### [李正宽：日本评论家揭中共活摘器官黑幕](../../pages/nsc1025/n13769799.md) 
-#### [王友群：新任公安部长王小洪的前车之鉴](../../pages/nsc1025/n13769534.md) 
-#### [【名家专栏】极权主义发展的五个阶段](../../pages/nsc1025/n13769252.md) 
-#### [周晓辉：南方洪灾严重 柬埔寨国王慰问凸显一事](../../pages/nsc1025/n13769409.md) 
 
 ---
 #### 第 [ [198](./198.md) / [197](./197.md) / [196](./196.md) / [195](./195.md) / [194](./194.md) / [193](./193.md) / [192](./192.md) / [191](./191.md) ] 页
