--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之八十一：“二流堂”冤案](../../pages/nsc1028/n13772788.md) 
 #### [王友群：涉案103亿元的金融巨贪落马之反思](../../pages/nsc1028/n13772297.md) 
 #### [中共罪行录之八十：“红卫军”事件始末](../../pages/nsc1028/n13769101.md) 
 #### [【名家专栏】外国受害者昭示 中共司法不可信](../../pages/nsc1028/n13767326.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之七十六：“现行反革命”张志新](../../pages/nsc1028/n13726926.md) 
 #### [林辉：鲁迅自言弃医从文原因有假](../../pages/nsc1028/n13727240.md) 
 #### [楚一丁：五四的困惑](../../pages/nsc1028/n13725250.md) 
-#### [王友群：毛泽东发动的“挖祖坟”运动](../../pages/nsc1028/n13723639.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
