--- a/indexes/nsc1026/53.md
+++ b/indexes/nsc1026/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [从总统拜登的税表中 我们学到什么？](../../pages/nsc1026/n13773081.md) 
 #### [王赫：中国楼市走向“黑洞”](../../pages/nsc1026/n13770647.md) 
 #### [谢田：中国银行挤兑会恶化到何种程度?](../../pages/nsc1026/n13766965.md) 
 #### [王赫：外贸外资稳不住中国经济](../../pages/nsc1026/n13753933.md) 
@@ -29,7 +30,6 @@
 #### [陈思敏：中共晒2021年外商投资未提台资的背后](../../pages/nsc1026/n13501057.md) 
 #### [【财经话题】美联储紧缩与2022年软着陆](../../pages/nsc1026/n13498354.md) 
 #### [【谈股论金】美联储三重紧缩 金融市场吹寒风](../../pages/nsc1026/n13487202.md) 
-#### [王赫：2022中国经济令人忧心](../../pages/nsc1026/n13480433.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
