--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [九霄：《一张传单》感动背后的创作亮点](../../pages/nsc1035/n13773830.md) 
 #### [吴玉：获奖电影《一张传单》，意外捡到宝的惊喜](../../pages/nsc1035/n13772014.md) 
 #### [南岛：罗大佑歌中的“亚细亚的孤儿”指谁？](../../pages/nsc1035/n13765051.md) 
 #### [吴吕南：与林郑决绝书](../../pages/nsc1035/n13764053.md) 
@@ -29,7 +30,6 @@
 #### [清竹：政法系统的朋友，您明白了吗？](../../pages/nsc1035/n13666721.md) 
 #### [吴玉：《抓捕2》影评——为守住良知的警察点赞](../../pages/nsc1035/n13664510.md) 
 #### [奥运史上的人性之光](../../pages/nsc1035/n13627118.md) 
-#### [云昭：谢燕益的道](../../pages/nsc1035/n13607391.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
